# markov-hs

./: CHANGELOG.md  README.md  markov.cabal
src/: Main.hs  Markov.hs
